# lttb-cpp

./: CMakeLists.txt  LICENSE  README.md
include/: lttb.hpp
test/: CMakeLists.txt  test-downsample.cpp  test-empty.cpp  test-small.cpp
test/data/: sample.csv  source.csv
